--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 layout: default
 ---
 
-<h1>Home</h1>
+<div class="hero">
+	<div class="hero-inner">
+		<p class="coderdojo-logo"><img src="{{ site.baseurl }}/assets/images/coderdojo-logo.svg" alt="CoderDojo"></p>
+		<h1 class="dojocon-logo">DojoCon Japan 2016</h1>
+		<p class="dojocon-copy"><span class="horizontal-line">The more Dojos, the more Coders.</span></p>
+		<p class="comingsoon">Coming Soon...</p>
+	</div>
+</div>
 
-<p><a href="{{ site.baseurl }}/about/">About</a></p>
-
-<p>Find me in index.html</p>
