Add "cool" to the subtitle

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
 	<div class="hero-inner">
 		<p class="coderdojo-logo"><img src="{{ site.baseurl }}/assets/images/coderdojo-logo.svg" alt="CoderDojo"></p>
 		<h1 class="dojocon-logo">DojoCon Japan 2016</h1>
-		<p class="dojocon-copy"><span class="horizontal-line">The more Dojos, the more Coders.</span></p>
+		<p class="dojocon-copy"><span class="horizontal-line">The more dojos, the more cool coders.</span></p>
 		<p class="comingsoon">Coming Soon...</p>
 	</div>
 </div>
