--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@ layout: default
 		<p class="coderdojo-logo"><img src="{{ site.baseurl }}/assets/images/coderdojo-logo.svg" alt="CoderDojo"></p>
 		<h1 class="dojocon-logo">DojoCon Japan 2016</h1>
 		<p class="dojocon-copy"><span class="horizontal-line">The more dojos, the more cool coders.</span></p>
+		<p class="dojocon-copy" style="font-size: 5rem;">
+			<a href="https://www.facebook.com/dojoconjapan/" style="display: inline-block; color:#fff; padding: 10px;"><i class="fa fa-facebook-square"></i></a>
+			<a href="https://twitter.com/DojoConJapan" style="display: inline-block; color:#fff; padding: 10px;"><i class="fa fa-twitter-square"></i></a>
+		</p>
 		<p class="comingsoon">Coming Soon...</p>
 	</div>
 </div>
