Improve the layout

--- a/sponsor.html
+++ b/sponsor.html
@@ -6,6 +6,7 @@ permalink: /sponsor/
 	iframe{
 		width:100%;
 		height: 100vh;
+		vertical-align: top;
 	}
 </style>
 <iframe src="https://docs.google.com/forms/d/1mXQ45DxPV9le-_cGRSXaMbF5eSHDt1ipM_duBuUwwJg/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
