--- a/index.html
+++ b/index.html
@@ -2,35 +2,42 @@
 layout: default
 ---
 
-<div class="hero">
-	<div class="hero-inner">
-		<p class="coderdojo-logo"><img src="{{ site.baseurl }}/assets/images/coderdojo-logo.svg" alt="CoderDojo"></p>
-		<h1 class="dojocon-logo">DojoCon Japan 2016</h1>
-		<p class="dojocon-copy"><span class="horizontal-line">The more dojos, the more cool coders.</span></p>
-<!--
-		<p class="dojocon-copy" style="font-size: 5rem;">
-			<a href="https://www.facebook.com/dojoconjapan/" style="display: inline-block; color:#fff; padding: 10px;"><i class="fa fa-facebook-square"></i></a>
-			<a href="https://twitter.com/DojoConJapan" style="display: inline-block; color:#fff; padding: 10px;"><i class="fa fa-twitter-square"></i></a>
-		</p>
--->
-		<p class="comingsoon">Coming Soon...</p>
+<header class="header">
+	<div class="hero">
+		<div class="hero-inner">
+			<p class="coderdojo-logo"><img src="{{ site.baseurl }}/assets/images/coderdojo-logo.svg" alt="CoderDojo"></p>
+			<h1 class="dojocon-logo">DojoCon Japan 2016</h1>
+			<p class="dojocon-copy"><span class="horizontal-line">The more dojos, the more cool coders.</span></p>
+			<ul class="teaser-action">
+				<li><a href="{{ site.baseurl }}/sponsor/">スポンサー募集中</a></li>
+			</ul>
+		</div>
+	</div>
+</header>
 
-		<div class="sns-widgets">
-			<div class="fb-page-plugin">
-				<div class="fb-page" data-href="https://www.facebook.com/DojoConJapan" data-tabs="timeline" data-width="460" data-height="460" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
+<div class="below-header">
+	<p class="comingsoon">Comming Soon...</p>
+</div>
+
+<main class="main" role="main">
+
+	<div class="section-follow-us">
+		<h2 class="section-title">Follow Us</h2>
+		<ul class="sns-widgets">
+			<li class="fb-page-plugin">
+				<div class="fb-page" data-href="https://www.facebook.com/DojoConJapan" data-tabs="timeline" data-width="640" data-height="320" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
 					<div class="fb-xfbml-parse-ignore">
 						<blockquote cite="https://www.facebook.com/DojoConJapan">
 							<a href="https://www.facebook.com/DojoConJapan">DojoCon Japan</a>
 						</blockquote>
 					</div>
 				</div>
-			</div>
-			<div class="tw-widget">
-				<a class="twitter-timeline"  href="https://twitter.com/DojoConJapan" data-widget-id="700966482826493952">Tweets by @DojoConJapan</a>
+			</li>
+			<li class="tw-widget">
+				<a class="twitter-timeline" href="https://twitter.com/DojoConJapan" data-widget-id="701331817903722496">Tweets by @DojoConJapan</a>
 				<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-			</div>
-		</div>
-
+			</li>
+		</ul>
 	</div>
-</div>
 
+</main>
