--- a/index.html
+++ b/index.html
@@ -2,23 +2,6 @@
 layout: default
 ---
 
-<header class="header">
-	<div class="hero">
-		<div class="hero-inner">
-			<p class="coderdojo-logo"><img src="{{ site.baseurl }}/assets/images/coderdojo-logo.svg" alt="CoderDojo"></p>
-			<h1 class="dojocon-logo">DojoCon Japan 2016</h1>
-			<p class="dojocon-copy"><span class="horizontal-line">The more dojos, the more cool coders.</span></p>
-			<ul class="teaser-action">
-				<li><a href="{{ site.baseurl }}/sponsor/">スポンサー募集中</a></li>
-			</ul>
-		</div>
-	</div>
-</header>
-
-<div class="below-header">
-	<p class="comingsoon">Comming Soon...</p>
-</div>
-
 <main class="main" role="main">
 
 	<div class="section-follow-us">
@@ -38,6 +21,11 @@ layout: default
 				<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 			</li>
 		</ul>
+	</div>
+
+	<div id="sponsor-form" class="section-sponsor-form">
+		<h2 class="section-title">Sponsor Form</h2>
+		<iframe class="google-form" src="https://docs.google.com/forms/d/1mXQ45DxPV9le-_cGRSXaMbF5eSHDt1ipM_duBuUwwJg/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 	</div>
 
 </main>
