Add PDF link to the front page

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ layout: default
 
 	<div id="sponsor-form" class="section-sponsor-form">
 		<h2 class="section-title">Sponsor Form</h2>
+		<p class="pdf-link"><a href="{{ site.baseurl }}assets/pdf/sponsor.pdf" target="_blank">DojoCon Japan 2016 スポンサーシップのご案内 [PDF 1.7MB]</a></p>
 		<iframe class="google-form" src="https://docs.google.com/forms/d/1mXQ45DxPV9le-_cGRSXaMbF5eSHDt1ipM_duBuUwwJg/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 	</div>
 
