Add sponsor part

--- a/sponsor.html
+++ b/sponsor.html
@@ -5,10 +5,6 @@ permalink: /sponsor/
 
 <main class="main" role="main">
 
-	<div id="sponsor-form" class="section-sponsor-form">
-		<h2 class="section-title">Sponsor Form</h2>
-		<p class="pdf-link"><a href="{{ site.baseurl }}assets/pdf/sponsor.pdf" target="_blank">DojoCon Japan 2016 スポンサーシップのご案内 [PDF 2.1MB]</a></p>
-		<iframe class="google-form" src="https://docs.google.com/forms/d/1mXQ45DxPV9le-_cGRSXaMbF5eSHDt1ipM_duBuUwwJg/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
-	</div>
+	{% include sponsor.html %}
 
 </main>
