--- a/index.html
+++ b/index.html
@@ -2,27 +2,8 @@
 layout: default
 ---
 
-<main class="main" role="main">
+<h1>Home</h1>
 
-	<div class="section-follow-us">
-		<h2 class="section-title">Follow Us</h2>
-		<ul class="sns-widgets">
-			<li class="fb-page-plugin">
-				<div class="fb-page" data-href="https://www.facebook.com/DojoConJapan" data-tabs="timeline" data-width="640" data-height="320" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
-					<div class="fb-xfbml-parse-ignore">
-						<blockquote cite="https://www.facebook.com/DojoConJapan">
-							<a href="https://www.facebook.com/DojoConJapan">DojoCon Japan</a>
-						</blockquote>
-					</div>
-				</div>
-			</li>
-			<li class="tw-widget">
-				<a class="twitter-timeline" href="https://twitter.com/DojoConJapan" data-widget-id="701331817903722496">Tweets by @DojoConJapan</a>
-				<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-			</li>
-		</ul>
-	</div>
+<p><a href="{{ site.baseurl }}/about/">About</a></p>
 
-	{% include sponsor.html %}
-
-</main>
+<p>Find me in index.html</p>
