Add About section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,53 @@ layout: default
 	</div>
 </div>
 
-<p><a href="{{ site.baseurl }}/about/">About</a></p>
+<div class="about-section">
+	<div class="row">
+		<h1 class="section-title">
+			<span class="en">About</span>
+			<span class="ja">DojoCon とは？</span>
+		</h1>
+		<div class="what-is-coderdojo">
+			<h2>CoderDojo って？</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus architecto voluptas pariatur, odit quae, deleniti totam.<br />
+				Dignissimos tenetur magnam culpa ad maiores, veniam possimus. Debitis animi modi quasi consequatur.</p>
+			<p><img src="//placehold.it/184x52.png?text=CoderDojo" alt="CoderDojo のロゴ"></p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et tempora quae maiores porro sed illo nobis pariatur eveniet necessitatibus dolorum. Excepturi illum quasi, voluptates odio! Fugit, laudantium ut magni hic!</p>
+		</div>
+	</div>
+	<div class="row">
+		<div class="what-is-dojocon">
+			<h2>DojoCon とは？</h2>
+			<p><strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem debitis provident rerum pariatur.</strong><br />
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est asperiores quidem officiis, harum nisi aperiam modi ut dolor doloribus fugiat, labore velit beatae rem laudantium praesentium deleniti sunt, voluptates eius.<br />
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum beatae dolores, sequi neque commodi officiis tempora eius dignissimos atque quisquam! Adipisci exercitationem, tenetur aut distinctio quis qui reiciendis impedit quibusdam.</p>
+			<p><img src="//placehold.it/468x205.png" alt="DojoCon のイメージ写真"></p>
+		</div>
+	</div>
+	<div class="row">
+		<div class="first-dojocon-japan">
+			<h2>初開催の DojoCon Japan</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta consequuntur, suscipit distinctio voluptas rerum eum.</p>
+			<ul>
+				<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
+				<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam cumque dicta minima necessitatibus doloribus, veniam distinctio quibusdam numquam laboriosam ducimus.</li>
+				<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
+			</ul>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus rem distinctio ducimus nobis, adipisci quos recusandae, facilis neque voluptates hic natus autem eos dicta, expedita ea reprehenderit quae esse iusto.</p>
+		</div>
+		<div class="row">
+			<div class="event-info">
+				<h2>開催概要</h2>
+				<p>開催日 : 2016年8月27日（土）<br />
+					時間 : 10:00 - 16:10（予定）<br />
+					場所 : 内田洋行 大阪 ユビキタス協創広場 CANVAS<br />
+					参加費 : 無料</p>
+				<a href="{{ site.entryurl }}">Entry</a>
+				<p><small>参加登録が必要です。</small></p>
+			</div>
+		</div>
+	</div>
+</div>
 
 <h2>Blog Posts</h2>
 <ul class="posts">
