Add Access section

--- a/index.html
+++ b/index.html
@@ -78,3 +78,24 @@ layout: default
 		</ul>
 	</div>
 </div>
+
+<div class="access-section">
+	<h1 class="section-title">
+		<span class="en">Access</span>
+		<span class="ja">会場アクセス</span>
+	</h1>
+	<h2>場所</h2>
+	<p><a href="">内田洋行 大阪 ユビキタス協創広場 CANVAS</a></p>
+	<div class="venue-images">
+		<p>Workshop Area / Session Area</p>
+	</div>
+	<h2>所在地</h2>
+	<p>大阪市中央区和泉町2-2-2</p>
+	<h2>地下鉄をご利用の場合</h2>
+	<p>地下鉄谷町線・中央線「谷町4丁目駅」8番出口より徒歩8分<br />
+		※お車でのご来館はご遠慮ください</p>
+	<div class="map">
+		<h2>Map</h2>
+	</div>
+</div>
+
