Add venue links

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ layout: default
 				<h2>開催概要</h2>
 				<p>開催日 : 2016年8月27日（土）<br />
 					時間 : 10:00 - 16:10（予定）<br />
-					場所 : 内田洋行 大阪 ユビキタス協創広場 CANVAS<br />
+					場所 : <a href="{{ site.venueurl }}">内田洋行 大阪 ユビキタス協創広場 CANVAS</a><br />
 					参加費 : 無料</p>
 				<a href="{{ site.entryurl }}">Entry</a>
 				<p><small>参加登録が必要です。</small></p>
@@ -85,7 +85,7 @@ layout: default
 		<span class="ja">会場アクセス</span>
 	</h1>
 	<h2>場所</h2>
-	<p><a href="">内田洋行 大阪 ユビキタス協創広場 CANVAS</a></p>
+	<p><a href="{{ site.venueurl }}">内田洋行 大阪 ユビキタス協創広場 CANVAS</a></p>
 	<div class="venue-images">
 		<p>Workshop Area / Session Area</p>
 	</div>
