Add Speakers section

--- a/index.html
+++ b/index.html
@@ -99,3 +99,59 @@ layout: default
 	</div>
 </div>
 
+<div class="speaker-section">
+	<h1 class="section-title">
+		<span class="en">Speaker</span>
+		<span class="ja">スピーカー</span>
+	</h1>
+	<ul class="speakers">
+		<li>
+			<span class="speaker-avator">
+				<img src="//placehold.it/200x200.png" alt="">
+			</span>
+			<span class="speaker-name">岡田 裕行</span>
+			<span class="speaker-description">BlocklyDuino</span>
+			<a href="">More</a>
+		</li>
+		<li>
+			<span class="speaker-avator">
+				<img src="//placehold.it/200x200.png" alt="">
+			</span>
+			<span class="speaker-name">岡田 裕行</span>
+			<span class="speaker-description">BlocklyDuino</span>
+			<a href="">More</a>
+		</li>
+		<li>
+			<span class="speaker-avator">
+				<img src="//placehold.it/200x200.png" alt="">
+			</span>
+			<span class="speaker-name">岡田 裕行</span>
+			<span class="speaker-description">BlocklyDuino</span>
+			<a href="">More</a>
+		</li>
+		<li>
+			<span class="speaker-avator">
+				<img src="//placehold.it/200x200.png" alt="">
+			</span>
+			<span class="speaker-name">岡田 裕行</span>
+			<span class="speaker-description">BlocklyDuino</span>
+			<a href="">More</a>
+		</li>
+		<li>
+			<span class="speaker-avator">
+				<img src="//placehold.it/200x200.png" alt="">
+			</span>
+			<span class="speaker-name">岡田 裕行</span>
+			<span class="speaker-description">BlocklyDuino</span>
+			<a href="">More</a>
+		</li>
+		<li>
+			<span class="speaker-avator">
+				<img src="//placehold.it/200x200.png" alt="">
+			</span>
+			<span class="speaker-name">岡田 裕行</span>
+			<span class="speaker-description">BlocklyDuino</span>
+			<a href="">More</a>
+		</li>
+	</ul>
+</div>
