--- a/index.html
+++ b/index.html
@@ -155,3 +155,44 @@ layout: default
 		</li>
 	</ul>
 </div>
+
+<div class="sponsors-section">
+	<h1 class="section-title">
+		<span class="en">Sponsors</span>
+		<span class="ja">スポンサー一覧</span>
+	</h1>
+	<section class="gold-sponsors">
+		<h2>Gold Sponsors</h2>
+		<ul class="sponsors">
+			<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt=""></a></li>
+			<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt=""></a></li>
+			<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt=""></a></li>
+		</ul>
+	</section>
+	<section class="silver-sponsors">
+		<h2>Silver Sponsors</h2>
+		<ul class="sponsors">
+			<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt=""></a></li>
+			<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt=""></a></li>
+			<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt=""></a></li>
+			<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt=""></a></li>
+		</ul>
+	</section>
+	<section class="bronze-sponsors">
+		<h2>Bronze Sponsors</h2>
+		<ul class="sponsors">
+			<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt=""></a></li>
+			<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt=""></a></li>
+			<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt=""></a></li>
+			<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt=""></a></li>
+			<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt=""></a></li>
+			<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt=""></a></li>
+			<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt=""></a></li>
+			<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt=""></a></li>
+			<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt=""></a></li>
+			<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt=""></a></li>
+			<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt=""></a></li>
+			<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt=""></a></li>
+		</ul>
+	</section>
+</div>
