Add a link to become a sponsor

--- a/index.html
+++ b/index.html
@@ -161,15 +161,15 @@ layout: default
 		<span class="en">Sponsors</span>
 		<span class="ja">スポンサー一覧</span>
 	</h1>
-	<section class="gold-sponsors">
+	<div class="gold-sponsors">
 		<h2>Gold Sponsors</h2>
 		<ul class="sponsors">
 			<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
 			<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
 			<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
 		</ul>
-	</section>
-	<section class="silver-sponsors">
+	</div>
+	<div class="silver-sponsors">
 		<h2>Silver Sponsors</h2>
 		<ul class="sponsors">
 			<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
@@ -177,8 +177,8 @@ layout: default
 			<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
 			<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
 		</ul>
-	</section>
-	<section class="bronze-sponsors">
+	</div>
+	<div class="bronze-sponsors">
 		<h2>Bronze Sponsors</h2>
 		<ul class="sponsors">
 			<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
@@ -194,5 +194,6 @@ layout: default
 			<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
 			<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
 		</ul>
-	</section>
+	</div>
+	<a class= "become-a-sponsor" href="{{ site.sponsorurl }}">スポンサー申し込み</a>
 </div>
