Add Contact section

--- a/index.html
+++ b/index.html
@@ -318,3 +318,12 @@ layout: default
 		</ul>
 	</div>
 </div>
+
+<div class="contact-section">
+	<h1 class="section-title">
+		<span class="en">Contact</span>
+		<span class="ja">お問い合わせ</span>
+	</h1>
+	<a href="" class="open-form">フォームを開く</a>
+</div>
+
