--- a/index.html
+++ b/index.html
@@ -327,3 +327,91 @@ layout: default
 	<a href="" class="open-form">フォームを開く</a>
 </div>
 
+<div class="staff-section">
+	<h1 class="section-title">
+		<span class="en">Staff</span>
+		<span class="ja">スタッフ</span>
+	</h1>
+	<ul class="members">
+		<li>
+			<figure class="avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
+			<h2 class="name">staff</h2>
+		</li>
+		<li>
+			<figure class="avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
+			<h2 class="name">staff</h2>
+		</li>
+		<li>
+			<figure class="avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
+			<h2 class="name">staff</h2>
+		</li>
+		<li>
+			<figure class="avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
+			<h2 class="name">staff</h2>
+		</li>
+		<li>
+			<figure class="avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
+			<h2 class="name">staff</h2>
+		</li>
+		<li>
+			<figure class="avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
+			<h2 class="name">staff</h2>
+		</li>
+		<li>
+			<figure class="avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
+			<h2 class="name">staff</h2>
+		</li>
+		<li>
+			<figure class="avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
+			<h2 class="name">staff</h2>
+		</li>
+		<li>
+			<figure class="avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
+			<h2 class="name">staff</h2>
+		</li>
+		<li>
+			<figure class="avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
+			<h2 class="name">staff</h2>
+		</li>
+		<li>
+			<figure class="avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
+			<h2 class="name">staff</h2>
+		</li>
+		<li>
+			<figure class="avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
+			<h2 class="name">staff</h2>
+		</li>
+		<li>
+			<figure class="avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
+			<h2 class="name">staff</h2>
+		</li>
+		<li>
+			<figure class="avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
+			<h2 class="name">staff</h2>
+		</li>
+		<li>
+			<figure class="avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
+			<h2 class="name">staff</h2>
+		</li>
+		<li>
+			<figure class="avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
+			<h2 class="name">staff</h2>
+		</li>
+		<li>
+			<figure class="avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
+			<h2 class="name">staff</h2>
+		</li>
+		<li>
+			<figure class="avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
+			<h2 class="name">staff</h2>
+		</li>
+		<li>
+			<figure class="avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
+			<h2 class="name">staff</h2>
+		</li>
+		<li>
+			<figure class="avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
+			<h2 class="name">staff</h2>
+		</li>
+	</ul>
+</div>
