Improve the markup

--- a/index.html
+++ b/index.html
@@ -106,51 +106,51 @@ layout: default
 	</h1>
 	<ul class="speakers">
 		<li>
-			<span class="speaker-avator">
+			<figure class="speaker-avator">
 				<img src="//placehold.it/200x200.png" alt="岡田裕行のプロフィール画像">
-			</span>
-			<span class="speaker-name">岡田 裕行</span>
-			<span class="speaker-description">BlocklyDuino</span>
+			</figure>
+			<h2 class="speaker-name">岡田 裕行</h2>
+			<p class="speaker-description">BlocklyDuino</p>
 			<a href="">More</a>
 		</li>
 		<li>
-			<span class="speaker-avator">
+			<figure class="speaker-avator">
 				<img src="//placehold.it/200x200.png" alt="岡田裕行のプロフィール画像">
-			</span>
-			<span class="speaker-name">岡田 裕行</span>
-			<span class="speaker-description">BlocklyDuino</span>
+			</figure>
+			<h2 class="speaker-name">岡田 裕行</h2>
+			<p class="speaker-description">BlocklyDuino</p>
 			<a href="">More</a>
 		</li>
 		<li>
-			<span class="speaker-avator">
+			<figure class="speaker-avator">
 				<img src="//placehold.it/200x200.png" alt="岡田裕行のプロフィール画像">
-			</span>
-			<span class="speaker-name">岡田 裕行</span>
-			<span class="speaker-description">BlocklyDuino</span>
+			</figure>
+			<h2 class="speaker-name">岡田 裕行</h2>
+			<p class="speaker-description">BlocklyDuino</p>
 			<a href="">More</a>
 		</li>
 		<li>
-			<span class="speaker-avator">
+			<figure class="speaker-avator">
 				<img src="//placehold.it/200x200.png" alt="岡田裕行のプロフィール画像">
-			</span>
-			<span class="speaker-name">岡田 裕行</span>
-			<span class="speaker-description">BlocklyDuino</span>
+			</figure>
+			<h2 class="speaker-name">岡田 裕行</h2>
+			<p class="speaker-description">BlocklyDuino</p>
 			<a href="">More</a>
 		</li>
 		<li>
-			<span class="speaker-avator">
+			<figure class="speaker-avator">
 				<img src="//placehold.it/200x200.png" alt="岡田裕行のプロフィール画像">
-			</span>
-			<span class="speaker-name">岡田 裕行</span>
-			<span class="speaker-description">BlocklyDuino</span>
+			</figure>
+			<h2 class="speaker-name">岡田 裕行</h2>
+			<p class="speaker-description">BlocklyDuino</p>
 			<a href="">More</a>
 		</li>
 		<li>
-			<span class="speaker-avator">
+			<figure class="speaker-avator">
 				<img src="//placehold.it/200x200.png" alt="岡田裕行のプロフィール画像">
-			</span>
-			<span class="speaker-name">岡田 裕行</span>
-			<span class="speaker-description">BlocklyDuino</span>
+			</figure>
+			<h2 class="speaker-name">岡田 裕行</h2>
+			<p class="speaker-description">BlocklyDuino</p>
 			<a href="">More</a>
 		</li>
 	</ul>
@@ -334,84 +334,84 @@ layout: default
 	</h1>
 	<ul class="members">
 		<li>
-			<figure class="avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
-			<h2 class="name">staff</h2>
+			<figure class="member-avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
+			<h2 class="member-name">staff</h2>
 		</li>
 		<li>
-			<figure class="avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
-			<h2 class="name">staff</h2>
+			<figure class="member-avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
+			<h2 class="member-name">staff</h2>
 		</li>
 		<li>
-			<figure class="avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
-			<h2 class="name">staff</h2>
+			<figure class="member-avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
+			<h2 class="member-name">staff</h2>
 		</li>
 		<li>
-			<figure class="avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
-			<h2 class="name">staff</h2>
+			<figure class="member-avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
+			<h2 class="member-name">staff</h2>
 		</li>
 		<li>
-			<figure class="avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
-			<h2 class="name">staff</h2>
+			<figure class="member-avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
+			<h2 class="member-name">staff</h2>
 		</li>
 		<li>
-			<figure class="avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
-			<h2 class="name">staff</h2>
+			<figure class="member-avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
+			<h2 class="member-name">staff</h2>
 		</li>
 		<li>
-			<figure class="avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
-			<h2 class="name">staff</h2>
+			<figure class="member-avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
+			<h2 class="member-name">staff</h2>
 		</li>
 		<li>
-			<figure class="avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
-			<h2 class="name">staff</h2>
+			<figure class="member-avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
+			<h2 class="member-name">staff</h2>
 		</li>
 		<li>
-			<figure class="avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
-			<h2 class="name">staff</h2>
+			<figure class="member-avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
+			<h2 class="member-name">staff</h2>
 		</li>
 		<li>
-			<figure class="avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
-			<h2 class="name">staff</h2>
+			<figure class="member-avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
+			<h2 class="member-name">staff</h2>
 		</li>
 		<li>
-			<figure class="avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
-			<h2 class="name">staff</h2>
+			<figure class="member-avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
+			<h2 class="member-name">staff</h2>
 		</li>
 		<li>
-			<figure class="avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
-			<h2 class="name">staff</h2>
+			<figure class="member-avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
+			<h2 class="member-name">staff</h2>
 		</li>
 		<li>
-			<figure class="avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
-			<h2 class="name">staff</h2>
+			<figure class="member-avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
+			<h2 class="member-name">staff</h2>
 		</li>
 		<li>
-			<figure class="avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
-			<h2 class="name">staff</h2>
+			<figure class="member-avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
+			<h2 class="member-name">staff</h2>
 		</li>
 		<li>
-			<figure class="avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
-			<h2 class="name">staff</h2>
+			<figure class="member-avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
+			<h2 class="member-name">staff</h2>
 		</li>
 		<li>
-			<figure class="avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
-			<h2 class="name">staff</h2>
+			<figure class="member-avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
+			<h2 class="member-name">staff</h2>
 		</li>
 		<li>
-			<figure class="avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
-			<h2 class="name">staff</h2>
+			<figure class="member-avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
+			<h2 class="member-name">staff</h2>
 		</li>
 		<li>
-			<figure class="avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
-			<h2 class="name">staff</h2>
+			<figure class="member-avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
+			<h2 class="member-name">staff</h2>
 		</li>
 		<li>
-			<figure class="avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
-			<h2 class="name">staff</h2>
+			<figure class="member-avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
+			<h2 class="member-name">staff</h2>
 		</li>
 		<li>
-			<figure class="avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
-			<h2 class="name">staff</h2>
+			<figure class="member-avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
+			<h2 class="member-name">staff</h2>
 		</li>
 	</ul>
 </div>
