Add SNS section

--- a/index.html
+++ b/index.html
@@ -415,3 +415,35 @@ layout: default
 		</li>
 	</ul>
 </div>
+
+<div class="sns-section">
+	<h1 class="section-title">
+		<span class="en">SNS</span>
+		<span class="copy">Check it out!</span>
+	</h1>
+	<ul class="fb-tw-widgets">
+		<li class="fb-page-plugin">
+			<div class="fb-page" data-href="https://www.facebook.com/DojoConJapan" data-tabs="timeline" data-width="640" data-height="320" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
+				<div class="fb-xfbml-parse-ignore">
+					<blockquote cite="https://www.facebook.com/DojoConJapan">
+						<a href="https://www.facebook.com/DojoConJapan">DojoCon Japan</a>
+					</blockquote>
+				</div>
+			</div>
+		</li>
+		<li class="tw-widget">
+			<a class="twitter-timeline" href="https://twitter.com/DojoConJapan" data-widget-id="701331817903722496">Tweets by @DojoConJapan</a>
+			<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+		</li>
+	</ul>
+
+	<div class="instagram-widget">
+	</div>
+
+	<p>@DojoConJapan</p>
+
+	<ul class="sns-links">
+		<li><a href="">f</a></li>
+		<li><a href="">t</a></li>
+	</ul>
+</div>
