--- a/index.html
+++ b/index.html
@@ -101,15 +101,17 @@ layout: default
 	<h2>場所</h2>
 	<p><a href="{{ site.venueurl }}" target="_blank">内田洋行 大阪 ユビキタス協創広場 CANVAS</a></p>
 	<div class="venue-images">
-		<p>Workshop Area / Session Area</p>
+		<div class="workshop-area"><p>Workshop Area</p></div>
+		<div class="session-area"><p>Session Area</p></div>
 	</div>
 	<h2>所在地</h2>
 	<p>大阪市中央区和泉町2-2-2</p>
 	<h2>地下鉄をご利用の場合</h2>
 	<p>地下鉄谷町線・中央線「谷町4丁目駅」8番出口より徒歩8分<br />
 		※お車でのご来館はご遠慮ください</p>
-	<div class="map">
+	<div class="map-outer">
 		<h2>Map</h2>
+		<p class="map"></p>
 	</div>
 </div>
 
