--- a/index.html
+++ b/index.html
@@ -123,51 +123,51 @@ layout: default
 	<ul class="speakers">
 		<li>
 			<figure class="speaker-avator">
-				<img src="//placehold.it/200x200.png" alt="岡田裕行のプロフィール画像">
+				<img src="//placehold.it/210" alt="岡田裕行のプロフィール画像">
 			</figure>
 			<h2 class="speaker-name">岡田 裕行</h2>
 			<p class="speaker-description">BlocklyDuino</p>
-			<a href="">More</a>
+			<a class="button button-small button-black" href="">More</a>
 		</li>
 		<li>
 			<figure class="speaker-avator">
-				<img src="//placehold.it/200x200.png" alt="岡田裕行のプロフィール画像">
+				<img src="//placehold.it/210" alt="岡田裕行のプロフィール画像">
 			</figure>
 			<h2 class="speaker-name">岡田 裕行</h2>
 			<p class="speaker-description">BlocklyDuino</p>
-			<a href="">More</a>
+			<a class="button button-small button-black" href="">More</a>
 		</li>
 		<li>
 			<figure class="speaker-avator">
-				<img src="//placehold.it/200x200.png" alt="岡田裕行のプロフィール画像">
+				<img src="//placehold.it/210" alt="岡田裕行のプロフィール画像">
 			</figure>
 			<h2 class="speaker-name">岡田 裕行</h2>
 			<p class="speaker-description">BlocklyDuino</p>
-			<a href="">More</a>
+			<a class="button button-small button-black" href="">More</a>
 		</li>
 		<li>
 			<figure class="speaker-avator">
-				<img src="//placehold.it/200x200.png" alt="岡田裕行のプロフィール画像">
+				<img src="//placehold.it/210" alt="岡田裕行のプロフィール画像">
 			</figure>
 			<h2 class="speaker-name">岡田 裕行</h2>
 			<p class="speaker-description">BlocklyDuino</p>
-			<a href="">More</a>
+			<a class="button button-small button-black" href="">More</a>
 		</li>
 		<li>
 			<figure class="speaker-avator">
-				<img src="//placehold.it/200x200.png" alt="岡田裕行のプロフィール画像">
+				<img src="//placehold.it/210" alt="岡田裕行のプロフィール画像">
 			</figure>
 			<h2 class="speaker-name">岡田 裕行</h2>
 			<p class="speaker-description">BlocklyDuino</p>
-			<a href="">More</a>
+			<a class="button button-small button-black" href="">More</a>
 		</li>
 		<li>
 			<figure class="speaker-avator">
-				<img src="//placehold.it/200x200.png" alt="岡田裕行のプロフィール画像">
+				<img src="//placehold.it/210" alt="岡田裕行のプロフィール画像">
 			</figure>
 			<h2 class="speaker-name">岡田 裕行</h2>
 			<p class="speaker-description">BlocklyDuino</p>
-			<a href="">More</a>
+			<a class="button button-small button-black" href="">More</a>
 		</li>
 	</ul>
 </div>
