--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ layout: default
 
 <div class="speaker-section">
 	<h1 class="section-title">
-		<span class="en">Speaker</span>
+		<span class="en">Speakers</span>
 		<span class="ja">スピーカー</span>
 	</h1>
 	<ul class="speakers">
@@ -172,7 +172,7 @@ layout: default
 	</ul>
 </div>
 
-<div class="sponsors-section">
+<div class="sponsor-section">
 	<h1 class="section-title">
 		<span class="en">Sponsors</span>
 		<span class="ja">スポンサー一覧</span>
@@ -211,7 +211,7 @@ layout: default
 			<li><a href=""><img src="//placehold.it/600x600.png?text=SPONSOR+LOGO" alt="スポンサー"></a></li>
 		</ul>
 	</div>
-	<a class= "become-a-sponsor" href="{{ site.sponsorurl }}">スポンサー申し込み</a>
+	<a class="button button-large button-block become-a-sponsor" href="{{ site.sponsorurl }}">スポンサー申し込み</a>
 </div>
 
 <div class="timetable-section">
