--- a/index.html
+++ b/index.html
@@ -18,23 +18,21 @@ layout: default
 
 <div class="about-section">
 	<div class="row">
-		<div class="container">
-			<h1 class="section-title">
-				<span class="en">About</span>
-				<span class="ja">DojoCon とは？</span>
-			</h1>
-			<div class="what-is-coderdojo">
-				<h2>CoderDojo って？</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus architecto voluptas pariatur, odit quae, deleniti totam.<br />
-					Dignissimos tenetur magnam culpa ad maiores, veniam possimus. Debitis animi modi quasi consequatur.</p>
-				<p class="coderdojo-logo"><img src="//placehold.it/360x100/000/fff701.png?text=CoderDojo" alt="CoderDojo のロゴ"></p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et tempora quae maiores porro sed illo nobis pariatur eveniet necessitatibus dolorum. Excepturi illum quasi, voluptates odio! Fugit, laudantium ut magni hic!</p>
-			</div>
+		<h1 class="section-title">
+			<span class="en">About</span>
+			<span class="ja">DojoCon とは？</span>
+		</h1>
+		<div class="what-is-coderdojo">
+			<h2>CoderDojo って？</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus architecto voluptas pariatur, odit quae, deleniti totam.<br />
+				Dignissimos tenetur magnam culpa ad maiores, veniam possimus. Debitis animi modi quasi consequatur.</p>
+			<p class="coderdojo-logo"><img src="//placehold.it/360x100/000/fff701.png?text=CoderDojo" alt="CoderDojo のロゴ"></p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et tempora quae maiores porro sed illo nobis pariatur eveniet necessitatibus dolorum. Excepturi illum quasi, voluptates odio! Fugit, laudantium ut magni hic!</p>
 		</div>
 	</div>
 	<div class="row">
 		<div class="what-is-dojocon">
-			<p><img src="//placehold.it/600x260.png" alt="DojoCon のイメージ写真"></p>
+			<figure><img src="//placehold.it/600x260.png" alt="DojoCon のイメージ写真"></figure>
 			<h2>DojoCon とは？</h2>
 			<p><strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem debitis provident rerum pariatur.</strong><br />
 				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est asperiores quidem officiis, harum nisi aperiam modi ut dolor doloribus fugiat, labore velit beatae rem laudantium praesentium deleniti sunt, voluptates eius.<br />
