Add timetable-section style

--- a/index.html
+++ b/index.html
@@ -231,37 +231,49 @@ layout: default
 			<div class="session-line">
 				<h2>Session Line</h2>
 				<ol class="sessions">
-					<li>
+					<li class="bg-light duration-10min">
 						<h3 class="session-title"><a href="">オープニングセレモニー</a></h3>
 						<p class="time"><small>[10:00-10:10]</small></p>
 					</li>
-					<li>
+					<li class="bg-dark duration-40min break-5min">
+						<h3 class="session-title"><a href="">基調講演<span class="speaker"> / 阿部和広</span></a></h3>
+						<p class="time"><small>[10:10-10:50]</small></p>
+					</li>
+					<li class="bg-light duration-40min break-5min">
+						<h3 class="session-title"><a href="">オープニングセレモニー</a></h3>
+						<p class="time"><small>[10:55-11:35]</small></p>
+					</li>
+					<li class="bg-dark duration-40min">
+						<h3 class="session-title"><a href="">オープニングセレモニー</a></h3>
+						<p class="time"><small>[10:55-11:35]</small></p>
+					</li>
+					<li class="duration-40min">
+						<h3 class="session-title"><a href="">お昼休憩</a></h3>
+						<p class="time"><small>[12:20-13:00]</small></p>
+					</li>
+					<li class="bg-light duration-25min">
 						<h3 class="session-title"><a href="">オープニングセレモニー</a></h3>
 						<p class="time"><small>[10:00-10:10]</small></p>
 					</li>
-					<li>
+					<li class="bg-dark duration-15min">
 						<h3 class="session-title"><a href="">オープニングセレモニー</a></h3>
 						<p class="time"><small>[10:00-10:10]</small></p>
 					</li>
-					<li>
+					<li class="bg-light duration-15min">
 						<h3 class="session-title"><a href="">オープニングセレモニー</a></h3>
 						<p class="time"><small>[10:00-10:10]</small></p>
 					</li>
-					<li>
+					<li class="bg-dark duration-25min">
 						<h3 class="session-title"><a href="">オープニングセレモニー</a></h3>
 						<p class="time"><small>[10:00-10:10]</small></p>
 					</li>
-					<li>
+					<li class="bg-light duration-30min">
 						<h3 class="session-title"><a href="">オープニングセレモニー</a></h3>
 						<p class="time"><small>[10:00-10:10]</small></p>
 					</li>
-					<li>
-						<h3 class="session-title"><a href="">オープニングセレモニー</a></h3>
-						<p class="time"><small>[10:00-10:10]</small></p>
-					</li>
-					<li>
-						<h3 class="session-title"><a href="">オープニングセレモニー</a></h3>
-						<p class="time"><small>[10:00-10:10]</small></p>
+					<li class="bg-dark duration-15min">
+						<h3 class="session-title"><a href="">スポンサー</a></h3>
+						<p class="time"><small>[14:50-15:05]</small></p>
 					</li>
 				</ol>
 			</div>
@@ -279,52 +291,53 @@ layout: default
 			<div class="workshop-line">
 				<h2>Workshop Line</h2>
 				<ol class="workshops">
-					<li>
+					<li class="bg-light duration-90min break-5min">
 						<h3 class="workshop-title"><a href="">ワークショップ１</a></h3>
 						<p class="time"><small>[10:00-10:10]</small></p>
-						<p><a href="">Entry</a></p>
+						<p><a class="button button-small button-blue" href="">Entry</a></p>
 					</li>
-					<li>
+					<li class="bg-dark duration-90min break-5min">
 						<h3 class="workshop-title"><a href="">ワークショップ１</a></h3>
 						<p class="time"><small>[10:00-10:10]</small></p>
-						<p><a href="">Entry</a></p>
+						<p><a class="button button-small button-blue" href="">Entry</a></p>
 					</li>
-					<li>
+					<li class="bg-light duration-90min break-5min">
 						<h3 class="workshop-title"><a href="">ワークショップ１</a></h3>
 						<p class="time"><small>[10:00-10:10]</small></p>
-						<p><a href="">Entry</a></p>
+						<p><a class="button button-small button-blue" href="">Entry</a></p>
 					</li>
-					<li>
+					<li class="bg-dark duration-90min">
 						<h3 class="workshop-title"><a href="">ワークショップ１</a></h3>
 						<p class="time"><small>[10:00-10:10]</small></p>
-						<p><a href="">Entry</a></p>
+						<p><a class="button button-small button-blue" href="">Entry</a></p>
 					</li>
 				</ol>
 			</div>
 		</div>
 	</div>
 	<div class="exhibition-block">
+		<h2>Exhibition</h2>
 		<ul class="exhibitions">
 			<li>
-				<figure><img src="//placehold.it/300x180.png" alt="展示１のイメージ"></figure>
+				<figure><img src="//placehold.it/600x360" alt="展示１のイメージ"></figure>
 				<div class="description">
-					<h2 class="exhibition-title">展示１<br>
+					<h3 class="exhibition-title">展示１<br>
 						<small>[Area: A]</small></h2>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae tenetur repellendus, consequatur harum, delectus nulla accusamus soluta dicta molestiae officia!</p>
 				</div>
 			</li>
 			<li>
-				<figure><img src="//placehold.it/300x180.png" alt="展示２のイメージ"></figure>
+				<figure><img src="//placehold.it/600x360" alt="展示２のイメージ"></figure>
 				<div class="description">
-					<h2 class="exhibition-title">展示２<br>
+					<h3 class="exhibition-title">展示２<br>
 						<small>[Area: B]</small></h2>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae tenetur repellendus, consequatur harum, delectus nulla accusamus soluta dicta molestiae officia!</p>
 				</div>
 			</li>
 			<li>
-				<figure><img src="//placehold.it/300x180.png" alt="展示３のイメージ"></figure>
+				<figure><img src="//placehold.it/600x360" alt="展示３のイメージ"></figure>
 				<div class="description">
-					<h2 class="exhibition-title">展示３<br>
+					<h3 class="exhibition-title">展示３<br>
 						<small>[Area: C]</small></h2>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae tenetur repellendus, consequatur harum, delectus nulla accusamus soluta dicta molestiae officia!</p>
 				</div>
