Add staff-section style

--- a/index.html
+++ b/index.html
@@ -361,83 +361,83 @@ layout: default
 	</h1>
 	<ul class="members">
 		<li>
-			<figure class="member-avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
+			<figure class="member-avator"><img src="//placehold.it/120" alt="スタッフのプロフィール画像"></figure>
 			<h2 class="member-name">staff</h2>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
+			<figure class="member-avator"><img src="//placehold.it/120" alt="スタッフのプロフィール画像"></figure>
 			<h2 class="member-name">staff</h2>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
+			<figure class="member-avator"><img src="//placehold.it/120" alt="スタッフのプロフィール画像"></figure>
 			<h2 class="member-name">staff</h2>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
+			<figure class="member-avator"><img src="//placehold.it/120" alt="スタッフのプロフィール画像"></figure>
 			<h2 class="member-name">staff</h2>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
+			<figure class="member-avator"><img src="//placehold.it/120" alt="スタッフのプロフィール画像"></figure>
 			<h2 class="member-name">staff</h2>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
+			<figure class="member-avator"><img src="//placehold.it/120" alt="スタッフのプロフィール画像"></figure>
 			<h2 class="member-name">staff</h2>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
+			<figure class="member-avator"><img src="//placehold.it/120" alt="スタッフのプロフィール画像"></figure>
 			<h2 class="member-name">staff</h2>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
+			<figure class="member-avator"><img src="//placehold.it/120" alt="スタッフのプロフィール画像"></figure>
 			<h2 class="member-name">staff</h2>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
+			<figure class="member-avator"><img src="//placehold.it/120" alt="スタッフのプロフィール画像"></figure>
 			<h2 class="member-name">staff</h2>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
+			<figure class="member-avator"><img src="//placehold.it/120" alt="スタッフのプロフィール画像"></figure>
 			<h2 class="member-name">staff</h2>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
+			<figure class="member-avator"><img src="//placehold.it/120" alt="スタッフのプロフィール画像"></figure>
 			<h2 class="member-name">staff</h2>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
+			<figure class="member-avator"><img src="//placehold.it/120" alt="スタッフのプロフィール画像"></figure>
 			<h2 class="member-name">staff</h2>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
+			<figure class="member-avator"><img src="//placehold.it/120" alt="スタッフのプロフィール画像"></figure>
 			<h2 class="member-name">staff</h2>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
+			<figure class="member-avator"><img src="//placehold.it/120" alt="スタッフのプロフィール画像"></figure>
 			<h2 class="member-name">staff</h2>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
+			<figure class="member-avator"><img src="//placehold.it/120" alt="スタッフのプロフィール画像"></figure>
 			<h2 class="member-name">staff</h2>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
+			<figure class="member-avator"><img src="//placehold.it/120" alt="スタッフのプロフィール画像"></figure>
 			<h2 class="member-name">staff</h2>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
+			<figure class="member-avator"><img src="//placehold.it/120" alt="スタッフのプロフィール画像"></figure>
 			<h2 class="member-name">staff</h2>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
+			<figure class="member-avator"><img src="//placehold.it/120" alt="スタッフのプロフィール画像"></figure>
 			<h2 class="member-name">staff</h2>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
+			<figure class="member-avator"><img src="//placehold.it/120" alt="スタッフのプロフィール画像"></figure>
 			<h2 class="member-name">staff</h2>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="//placehold.it/100x100.png" alt="スタッフのプロフィール画像"></figure>
+			<figure class="member-avator"><img src="//placehold.it/120" alt="スタッフのプロフィール画像"></figure>
 			<h2 class="member-name">staff</h2>
 		</li>
 	</ul>
