--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@ layout: default
 	<div class="instagram-widget">
 	</div>
 
-	<p>@DojoConJapan</p>
+	<p class="sns-id">@DojoConJapan</p>
 
 	<ul class="sns-links">
 		<li><a href="">f</a></li>
