Add share links

--- a/index.html
+++ b/index.html
@@ -471,7 +471,11 @@ layout: default
 	<p class="sns-id">@DojoConJapan</p>
 
 	<ul class="sns-links icon-share">
-		<li><a href="" class="icon-facebook-circle"></a></li>
-		<li><a href="" class="icon-twitter-circle"></a></li>
+		<li><a href="https://www.facebook.com/sharer.php?u={{ '/' | prepend: site.url }}" class="icon-facebook-circle" target="_blank"></a></li>
+		<li><a href="https://twitter.com/share?
+			url={{ '/' | prepend: site.url }}&
+			text={{ site.title }}&
+			hashtags={{ site.twitter.hashtag }}&
+			via={{ site.twitter.id }}" class="icon-twitter-circle" target="_blank"></a></li>
 	</ul>
 </div>
